# devops-cli

./: Cargo.toml  README.md  install.sh
src/: __main__.py  cli.rs  config.rs  core.py  errors.rs  main.rs
src/commands/: bench.rs  cron.rs  docker.rs  encode.rs  env.rs  git.rs  http.rs  json.rs  mod.rs  port.rs  serve.rs  system.rs
src/tui/: cron_builder.rs  docker_stats.rs  mod.rs  system_monitor.rs
src/utils/: clipboard.rs  colors.rs  confirm.rs  mod.rs  spinner.rs  table.rs
tests/: integration.rs  test_core.py  test_integration.py
tests/fixtures/: sample.env  sample.env.example  sample.json  schema.json
tests/integration/: test_cron.rs  test_encode.rs  test_env.rs  test_http.rs  test_json.rs
